horizontal scroll fix

--- a/a4-speakup/assets/scss/components/_header.scss
+++ b/a4-speakup/assets/scss/components/_header.scss
@@ -35,15 +35,3 @@
     position: absolute;
     right: 0;
 }
-
-// .header--center {
-//     position:fixed;
-//     left: 50%;
-//     top:  50%;
-//     margin-left: -15px;
-//     margin-top:  -15px;
-// }
-
-body {
-    overflow-x: hidden;
-}
